fixed pictures being too big

--- a/Movie Guesser/index.html
+++ b/Movie Guesser/index.html
@@ -8,14 +8,14 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>Movie Guesser</title>
+    <title>Ghibli Guesser</title>
 
 </head>
 <body>
 
     <div id="header">
 
-        <h1>Movie Guesser</h1>
+        <h1>Ghibli Guesser</h1>
 
     </div>
 
@@ -60,19 +60,19 @@
 
             if (randomIndex == 0) {
 
-                document.write('<img src="' + imgArray[0] + '">')
+                document.write('<img id="img" src="' + imgArray[0] + '">')
 
             } 
 
             else if (randomIndex == 1) {
 
-                document.write('<img src="' + imgArray[1] + '">')
+                document.write('<img id="img" src="' + imgArray[1] + '">')
 
             } 
 
             else if (randomIndex == 2) {
 
-                document.write('<img src="' + imgArray[2] + '">')
+                document.write('<img id="img" src="' + imgArray[2] + '">')
 
             }
 
