--- a/Movie Guesser/index.html
+++ b/Movie Guesser/index.html
@@ -120,6 +120,16 @@
         </script>
 
     </div>
+
+    <br><br>
+
+    <div id="footer">
+
+        <a href="#header">Back To Top</a>
+        <p>Pictures from: <a href="https://film-grab.com" target="_blank">FILMGRAB</a></p>
+        <p>&copy;Hendry Reyes</p>
+
+    </div>
     
 </body>
 </html>
