ponyo push compressed

--- a/Movie Guesser/index.html
+++ b/Movie Guesser/index.html
@@ -21,9 +21,9 @@
 
     <div id="screen">
 
-        <script src="ponyo.js"></script>
+        <script src="movies.js"></script>
 
-        
+
 
     </div>
 
