--- a/Movie Guesser/index.html
+++ b/Movie Guesser/index.html
@@ -15,7 +15,7 @@
 
     <div id="header">
 
-        <h1>Ghibli Guesser</h1>
+        <a href="index.html">Ghibli Guesser<a>
 
     </div>
 
@@ -28,8 +28,6 @@
     </div>
 
     <div id="textbox">
-
-        <br><br>
 
         <select id="choice">
 
@@ -45,8 +43,6 @@
         <script src="submit.js"></script>
 
     </div>
-
-    <br><br>
 
     <div id="footer">
 
