--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hendry Reyes</title>
 </head>
 <body>
+
+    <header>
+
+
+
+    </header>
+
+    <main>
+
+        <section>
+
+            
+
+        </section>
+
+    </main>
     
 </body>
 </html>
