started bio page

--- a/index.html
+++ b/index.html
@@ -4,22 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hendry Reyes</title>
+
+    <link rel="stylesheet" href="Bio_Page/style.css">
+
 </head>
 <body>
 
     <header>
 
+        <h1>Hendry Reyes</h1>
 
+        <nav>
+
+            <a href="#bio">About Me</a>
+            <a href="#lang">Languages</a>
+            <a href="#proj">Projects</a>
+
+        </nav>
 
     </header>
 
     <main>
 
-        <section>
+        <section id="bio">
 
-            
+            <h2>About Me</h2>
+
+            <p>My name is Hendry Reyes. I am a web developer and I love to code. I am currently learning how to code in Python, HTML, CSS, and JavaScript.<br> I am also learning how to use SQl. I am excited to learn more about web development and to create my own projects.</p>
 
         </section>
+
+        <section id="lang">
+
+            <h2>Programming Languages</h2>
+
+            <ul>
+
+                <li>Python</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>SQL</li>
+
+        </section>
+
+        <section id="proj">
+
+            <h2>My projects</h2>
+
+        </section>
+
+
+        <footer>
+
+            <p>&copy; 2024 Hendry Reyes</p>
+
+        </footer>
+
 
     </main>
     
