--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
 
     <header>
 
-        <h1>Hendry Reyes</h1>
-
         <nav>
 
-            <a href="#bio">About Me</a>
-            <a href="#lang">Languages</a>
-            <a href="#proj">Projects</a>
+            <ul>
+
+                <li><a href="#bio">About Me</a></li>
+                <li><a href="#lang">Languages</a></li>
+                <li><a href="#proj">Projects</a></li>
+                
+            </ul>
 
         </nav>
+
+        <h1>Hendry Reyes</h1>
 
     </header>
 
