--- a/Spotify/topartist.html
+++ b/Spotify/topartist.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Proj</title>
+    <title>Document</title>
 </head>
 <body>
     <header id="header">
-        <h1>Welcome to Listify</h1>
+        <h1>Top Artist</h1>
     </header>
 
     <nav>
@@ -18,13 +18,5 @@
             <li><a href="recentlisten.html" >Recent Listens</a></li>
         </ul>
     </nav>
-
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
