--- a/Spotify/recentlisten.html
+++ b/Spotify/recentlisten.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify Proj</title>
+    <title>Document</title>
 </head>
 <body>
     <header id="header">
-        <h1>Welcome to Listify</h1>
+        <h1>Recently Listened To</h1>
     </header>
 
     <nav>
@@ -20,11 +20,9 @@
     </nav>
 
     <main>
-
+        <ul>
+            
+        </ul>
     </main>
-
-    <footer>
-
-    </footer>
 </body>
 </html>
